--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -17,7 +17,7 @@
                                <div class="product">
                                    <div class="row justify-content-center align-items-center" style="padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;margin-top: 5px;margin-bottom: 5px;">
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="padding-right: 20px;">
-                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 110px;"></div>
+                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="/images/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 110px;"></div>
                                        </div>
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto product-info"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a>
                                            <div class="product-specs">
@@ -32,7 +32,7 @@
                                    </div>
                                    <div class="row justify-content-center align-items-center" style="padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;margin-top: 5px;margin-bottom: 5px;">
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="padding-right: 20px;">
-                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 110px;"></div>
+                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="/images/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 110px;"></div>
                                        </div>
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto product-info"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a>
                                            <div class="product-specs">
@@ -47,7 +47,7 @@
                                    </div>
                                    <div class="row justify-content-center align-items-center" style="padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;margin-top: 5px;margin-bottom: 5px;">
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="padding-right: 20px;">
-                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="assets/img/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 100px;"></div>
+                                           <div class="product-image"><img class="img-fluid d-block mx-auto image" src="/images/Ultimate-Vanilla-Cupcakes-01.jpg?h=a85b89dc674aeb8cc149921cd89dcba8" style="width: 74px;height: 100px;"></div>
                                        </div>
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto product-info"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a>
                                            <div class="product-specs">
@@ -69,8 +69,9 @@
                                <h4 class="text-center" style="padding-bottom: 5px;padding-top: 20px;"><span class="text" style="font-size: 22px;"><strong>Subtotal: &nbsp;</strong></span><span class="price" style="font-size: 22px;">$25.00</span></h4>
                                <h4 style="padding-bottom: 17px;padding-top: 5px;"><span class="text" style="font-size: 22px;"><strong>Shipping: &nbsp;</strong></span><span class="price" style="font-size: 22px;">Calculated At Checkout</span></h4>
                                <h4 style="padding-bottom: 20px;padding-top: 5px;"><span class="text" style="font-size: 22px;"><strong>Tax: &nbsp;</strong></span><span class="price" style="font-size: 22px;">Calculated At Checkout</span></h4>
-                               <h4 style="padding-bottom: 0px;padding-top: 10px;margin-bottom: 45px;"><span class="text" style="font-size: 25px;"><strong>Total: &nbsp;</strong></span><span class="price" style="font-size: 25px;"><strong>$25.00</strong></span></h4><button class="btn btn-primary btn-block btn-lg border rounded shadow-sm"
-                                   type="button" style="background-color: rgb(79,121,96);font-size: 22px;">Checkout</button></div>
+                               <h4 style="padding-bottom: 0px;padding-top: 10px;margin-bottom: 45px;"><span class="text" style="font-size: 25px;"><strong>Total: &nbsp;</strong></span><span class="price" style="font-size: 25px;"><strong>$25.00</strong></span></h4><a href = "/check_out">
+                                 <button class="btn btn-primary btn-block btn-lg border rounded shadow-sm"
+                                   type="button"  style="background-color: rgb(79,121,96);font-size: 22px;">Checkout</button> </a></div>
                        </div>
                    </div>
                </div>
