--- a/views/check_out.hbs
+++ b/views/check_out.hbs
@@ -28,11 +28,11 @@
 
                                 <div class="col-sm-7" id="recipientName">
 
-                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Recipient Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="Recipient Name" minlength="1" required="">
+                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>First Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="First Name" minlength="1" required="">
                                     <!--This is the validation funciton for the recipient name-->
                                     <script type = "text/javascript">
                                       function verifyName(name, id){
-                                        var nameRegEx = new RegExp(/^[a-zA-Z]+$/);
+                                        var nameRegEx = new RegExp(/^[a-zA-Z\s]+$/);
                                         if(nameRegEx.test(name) != true){
                                           alert("Please use letters in the name field");
                                         }
@@ -40,9 +40,25 @@
                                     </script>
                                   </div>
                                 </div>
+                                <div class="form-row" style="padding-left: 10px;">
+
+                                    <div class="col-sm-7" id="recipientName">
+
+                                        <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Last Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="Last Name" minlength="1" required="">
+                                        <!--This is the validation funciton for the recipient name-->
+                                        <script type = "text/javascript">
+                                          function verifyName(name, id){
+                                            var nameRegEx = new RegExp(/^[a-zA-Z\s]+$/);
+                                            if(nameRegEx.test(name) != true){
+                                              alert("Please use letters in the name field");
+                                            }
+                                          }
+                                        </script>
+                                    </div>
+                                </div>
                                 <!--This is the phone number-->
                                 <div class="col-sm-7" id="phoneNumber" style="height: 87px;">
-                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number</strong></label><input class="form-control" type="tel" onchange="verifyPhoneNum(this.value, id)" id="phoneNumber" placeholder="Phone Number" required="" minlength="1" inputmode="tel">
+                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number (No dashes needed)</strong></label><input class="form-control" type="tel" onchange="verifyPhoneNum(this.value, id)" id="phoneNumber" placeholder="Phone Number" required="" minlength="1" maxlength = "13" inputmode="tel">
                                       <!--This is the validation function for the phone number-->
                                       <script type = "text/javascript">
                                         function verifyPhoneNum(number, id){
@@ -116,7 +132,7 @@
                                           function verifyZip(zip, id){
                                             var zipRegExp = new RegExp(/^[0-9]+$/);
 
-                                            if(zipRegExp.test(zip) != true || zip.length < 6){
+                                            if(zipRegExp.test(zip) != true || zip.length != 5){
                                               alert("Please use 5 numbers for your zip code");
                                             }
                                           }
@@ -126,7 +142,7 @@
                                 </div>
                                 <!--This is the state-->
                                 <div class="col-sm-8 col-xl-3" id="state">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State</strong></label><input class="form-control" type="text" id="shippingState" onchange = "verifyState(this.value, id)" placeholder="State" required="" minlength="2" maxlength="2">
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State (Two Letter, "NY" or "FL")</strong></label><input class="form-control" type="text" id="shippingState" onchange = "verifyState(this.value, id)" placeholder="State" required="" minlength="2" maxlength="2">
                                       <!--This is the validation for the state-->
                                       <script type = "text/javascript">
                                         function verifyState(state, id){
@@ -141,6 +157,7 @@
                                 </div>
                             </div>
                         </div>
+                      </div>
                         <div class="col-sm-12" id="proceed">
                             <div class="form-group"><button class="btn btn-primary btn-block" id="proceedShipping" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;font-size: 20px;">Proceed</button></div>
                         </div>
@@ -233,7 +250,7 @@
                                   <!--This is the validation for the card holders-->
                                   <script type = "text/javascript">
                                     function verifyCardHolder(cardHolder, id){
-                                      var cardHolderRegEx = new RegExp(/^[a-zA-Z]+$/);
+                                      var cardHolderRegEx = new RegExp(/^[a-zA-Z\s]+$/);
                                       if(cardHolderRegEx.test(cardHolder) != true){
                                         alert("Please use your name in the card holder field");
                                       }
@@ -243,12 +260,16 @@
                             </div>
                             <!--This is the expiration field-->
                             <div class="col-sm-5">
-                                <div class="form-group"><label>Expiration date</label>
-                                    <div class="input-group expiration-date"><input class="form-control" type="text" id="monthExpr" onchange = "verifyExpiration(this.value, id)" placeholder="MM"><input class="form-control" type="text" id="yearExpr" onchange = "verifyExpirationYear(this.value, id)" placeholder="YY">
+                                <div class="form-group"><label>Expiration date (12/20, 06/21)</label>
+                                    <div class="input-group expiration-date"><input class="form-control" type="text" minlength = "2" maxlength = "2" id="monthExpr" onchange = "verifyExpiration(this.value, id)" placeholder="MM"><input class="form-control" type="text" id="yearExpr" minlength = "2" maxlength = "2" onchange = "verifyExpirationYear(this.value, id)" placeholder="YY">
                                       <!--This is the validation for the month-->
                                       <script type = "text/javascript">
                                         function verifyExpiration(expirationMonth, id){
                                           var expirationDateRegEx = new RegExp(/^[0-9]+$/);
+
+                                          if(expirationMonth < 1 || expirationMonth > 12){
+                                            alert("Please enter a valid month");
+                                          }
                                           if(expirationDateRegEx.test(expirationMonth) != true){
                                             alert("Please use two numbers for the expiration month");
                                           }
@@ -258,6 +279,7 @@
                                         <script type = "text/javascript">
                                         function verifyExpirationYear(expirationYear, id){
                                           var expirationDateRegEx = new RegExp(/^[0-9]+$/);
+
                                           if(expirationDateRegEx.test(expirationYear) != true){
                                             alert("Please use two numbers for the expiriation year");
                                           }
@@ -268,7 +290,7 @@
                             </div>
                             <div class="col-sm-8">
                                 <!--This is the credit card form-->
-                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" type="text" onchange = "verifyCard(this.value, id)" id="cardNumber" placeholder="Card Number">
+                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" minlength = "13" maxlength = "16" type="text" onchange = "verifyCard(this.value, id)" id="cardNumber" placeholder="Card Number">
                                   <!--This is the credit card validation-->
                                   <script type = "text/javascript">
                                     function verifyCard(cardNumber, id){
